[package]
name = "colo-rs"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/oknozor/colo-rs"
description="""
colortest in rust
""" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"